Finish 'some random information' section

--- a/styles.css
+++ b/styles.css
@@ -42,16 +42,42 @@ header {
 .hero {
     display: inline-block;
     width: 95%;
-    background-color: gray;
+    padding-bottom: 90px;
 }
 .hero-txt {
-    max-width: 40%;
-    background-color: blueviolet;
+    max-width: 45%;
     display: inline-block;
+    text-align: left;
+    padding-right: 40px;
 }
 .hero-img {
-    background-color: rgb(65, 43, 43);
-    max-width: 40%;
-    height: auto;
+    max-width: 45%;
     display: inline-block;
+    vertical-align: top;
+}
+.hero-btn {
+    padding: 12px 26px 12px 26px;
+    border-radius: 10px;
+    border-style: none;
+    color: white;
+    background-color: #3882f6;
+}
+.site-info {
+    text-align: center;
+}
+.site-info article {
+    display: inline-block;
+    max-width: 20%;
+
+}
+.site-info img {
+    width: 50%;
+    height: 100px;
+    border: 2px solid blue;
+    border-radius: 15%;
+}
+.site-info p {
+    width: 50%;
+    margin: 0 auto;
+    padding-top: 10px;
 }
