Give footer width, background color, and center it as well

--- a/styles.css
+++ b/styles.css
@@ -87,7 +87,7 @@ header {
     color: #1f2937;
     font-weight: 400;
     font-style: italic;
-    width: 75%;
+    max-width: 75%;
     margin: 120px auto;
     padding: 80px 50px 80px 50px;
 }
@@ -100,7 +100,7 @@ header {
     width: 55%;
     background-color:#3882f6;
     color: white;
-    margin: 20px auto;
+    margin: 120px auto;
     padding: 40px 100px 40px 100px;
     border-radius: 15px;
 }
@@ -121,4 +121,12 @@ header {
 .cta-btn-container {
     display: inline-block;
     vertical-align: middle;
+}
+footer {
+    background-color: #1f2937;
+    color: white;
+    width: 75%;
+    margin: 0 auto;
+    padding: 5px 50px;
+    text-align: center;
 }
