--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,7 @@ header {
     float: left;
     font-size: 24px;
     color: #F9FAF8;
+    margin-right: 100px;
 }
 .main-nav {
     margin: 0 0 135px 0;
@@ -36,23 +37,24 @@ header {
     display: inline-block;
     padding: 10px 20px 10px 20px;
 }
-.main-nav li:nth-child(2) {
-    /* margin-left: 10%; */
-}
 .main-nav a {
     color: #E5E7EB;
     text-decoration: none;
-}
-.hero {
-    /* display: inline-block; */
-    /* width: 95%; */
-    /* padding-bottom: 90px; */
 }
 .hero-txt {
     width: 45%;
     display: inline-block;
     text-align: left;
     padding-right: 40px;
+}
+.hero-txt h1 {
+    font-size: 48px;
+    color: #f9faf8;
+    font-weight: 900;
+}
+.hero-txt p {
+    color: #e5e7eb;
+    font-size: 18px;
 }
 .hero-img {
     width: 45%;
@@ -71,13 +73,12 @@ header {
 }
 .site-info article {
     display: inline-block;
-    max-width: 20%;
+    width: 20%;
 
 }
 .site-info img {
     width: 50%;
     height: 100px;
-    border: 2px solid blue;
     border-radius: 15%;
 }
 .site-info p {
