--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@ header {
 .container {
     width: 80%;
     margin: 0 auto;
+    overflow-x: hidden;
 }
 
 .logo {
@@ -89,15 +90,15 @@ header {
     margin: 0 auto;
     padding-top: 10px;
 }
-.testimonials {
+.testimonials .container{
     background-color: #e5e7eb;
     font-size: 36px;
     color: #1f2937;
     font-weight: 400;
     font-style: italic;
-    max-width: 75%;
-    margin: 120px auto;
-    padding: 80px 50px 80px 50px;
+    margin-top: 120px;
+    box-sizing: border-box; 
+    padding: 50px 80px 50px 80px; 
 }
 .author {
     color: black;
