--- a/styles.css
+++ b/styles.css
@@ -117,6 +117,12 @@ header {
     width: 70%;
     display: inline-block;
 }
+.cta-btn-container {
+    display: inline-block;
+    vertical-align: middle;
+    height: 100px;
+    margin-left: 20px;
+}
 .cta-btn {
     float: right;
     vertical-align: middle;
@@ -126,10 +132,6 @@ header {
     padding: 8px 25px;
     color: white;
 
-}
-.cta-btn-container {
-    display: inline-block;
-    vertical-align: middle;
 }
 footer {
     background-color: #1f2937;
